--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ outputs:
   index: # id of output
     description: 'Displays index'
   updateId: # id of output
-    description: 'Displays index' update id
+    description: 'Displays index update id'
 runs:
   using: 'node12'
   main: 'index.js'
