--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
 name: 'Deploy Search Index'
 description: 'Deploy Hugo Search Index to MeiliSearch Instance'
+icon: box
+color: red
 inputs:
   key:  # id of input
     description: 'MeiliSearch Private API Key'
